tdf#132201: use proper sequence order of effects per spec

See CT_EffectList in ECMA-376

Change-Id: Ib0605f1e4a0795d2bfdbb6b7451a902c67ea504d